añadido endpoint para gráficos en dashboard de empresa, datos de exito, nuevos incritos...
